argocd/monitoring/grafana/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: grafana
        port: 80
      middlewares:
        - name: kube-system-private-ips-allow@kubernetescrd
  tls:
    secretName: grafana-certificate
